--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -123,6 +123,7 @@
     width: 100vw;
     top: 0%;
     padding: 0 10px;
+    background: linear-gradient(white, 75%, transparent);
   }
 
   .search-icon {
@@ -139,7 +140,7 @@
   .hero-image {
     height: 100%;
     width: 100%;
-    min-height: 500px;
+    min-height: 300px;
   }
 
   .company-logo,
