--- a/src/Containers/homePage/homePage.css
+++ b/src/Containers/homePage/homePage.css
@@ -17,6 +17,12 @@
   margin-bottom: 20px;
 }
 
+.btn-active {
+  color: green !important;
+  background-color: #fff !important;
+  border: 1px solid green !important;
+}
+
 .home-page-intro-box {
   display: flex;
   flex-direction: column;
